--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0 auto;
+  box-sizing: border-box;
+  overflow-x: clip;
 }
 
 .logo {
